[gd_scene load_steps=4 format=3 uid="uid://q2kwmwelksyu"]

[ext_resource type="Script" uid="uid://bxkyijsqsrmq7" path="res://Scripts/level_select.gd" id="1_nkys2"]
[ext_resource type="Texture2D" uid="uid://c1nk0bt0l0osg" path="res://Backgrounds/wp7495795.png" id="2_lx4vd"]
[ext_resource type="Texture2D" uid="uid://bv07x5ibjjcuw" path="res://Assests/New Piskel-1.png (2).png" id="3_lx4vd"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkys2")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lx4vd")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -290.0
offset_right = 475.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.654902, 0.654902, 0.654902, 0.745098)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -146.5
offset_right = 315.0
offset_bottom = 146.5
grow_horizontal = 2
grow_vertical = 2

[node name="ParkingLot" type="TextureButton" parent="ColorRect/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_lx4vd")

[node name="TextureButton2" type="TextureButton" parent="ColorRect/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_lx4vd")

[node name="TextureButton3" type="TextureButton" parent="ColorRect/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_lx4vd")

[node name="Back" type="Button" parent="ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -42.0
offset_right = 61.0
offset_bottom = -11.0
grow_vertical = 0
text = "Back
"

[connection signal="pressed" from="ColorRect/ColorRect/HBoxContainer/ParkingLot" to="." method="_on_parking_lot_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect/Back" to="." method="_on_back_pressed"]
